added styling to page with example color palette; ImageContainer added back into main flow; renamed SideMenu to MainMenu so alignment doesn't matter

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -7,3 +7,8 @@ $brightAccent: #fbd14b;
 $accent2: #6a60a9;
 
 $menuColor: orange;
+
+$red: #FF1B1C;
+$yellow: #FFDA23;
+$green: #84C61F;
+$blue: #2BA0DB;
