--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -1,3 +1,7 @@
+.svg {
+	height: 22em;
+}
+
 body {
 	display: flex;
 	justify-content: center;
@@ -11,7 +15,7 @@ body {
 }
 
 .main-content-container {
-	margin-top: 4em;
+	margin-top: 0;
 }
 
 .header-container {
