--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -1,19 +1,21 @@
-.menu {
+#menu {
 	align-content: center;
 	border: 2px solid $red;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
 	left: 0;
+	justify-content: center;
 	padding: 1% 0;
 	position: fixed;
 	text-align: center;
 	top: 0;
 	width: 99vw;
+
+	transition: all 0.5s ease;
 }
 
 .menu-btn {
-	border: 0px solid white;
+	border: 0px solid $red;
 	box-shadow: none;
 	color: $red;
 	display: block;
@@ -21,10 +23,29 @@
 	margin-bottom: 0.5em;
 	text-transform: lowercase;
 
+	transition: all 0.5s ease;
+
 	&:hover {
-		border: 0px solid white;
+		border: 0px solid $red;
 		box-shadow: none;
 		cursor: pointer;
 		letter-spacing: 0.2em;
 	}
+}
+
+#header-btn-container {
+	display: flex;
+	justify-content: center;
+
+	transition: all 0.5s ease;
+}
+
+.header-btn {
+	border: 1px solid $red;
+	color: $red;
+	display: block;
+	letter-spacing: 0.1em;
+	text-align:center;
+	text-transform: lowercase;
+	width: 7em;
 }
