--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,3 +7,10 @@
 @import '_thumbImgs';
 @import '_carousel';
 @import '_animations';
+
+.hidden {
+	height: 0;
+	opacity: 0;
+
+	transition: all 0.5s ease;
+}
