--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -10,8 +10,14 @@
 	text-align: center;
 	top: 0;
 	width: 99vw;
+	z-index: 200;
 
-	transition: all 0.5s ease;
+	transition: height 0.5s ease;
+	transition: opacity 0.6s ease;
+
+	&.hidden {
+		transition: opacity 0.1s ease;
+	}
 }
 
 .menu-btn {
@@ -22,6 +28,7 @@
 	letter-spacing: 0.1em;
 	margin-bottom: 0.5em;
 	text-transform: lowercase;
+	width: 7em;
 
 	transition: all 0.5s ease;
 
@@ -48,4 +55,9 @@
 	text-align:center;
 	text-transform: lowercase;
 	width: 7em;
+
+	&:hover {
+		cursor: pointer;
+		letter-spacing: 0.2em;
+	}
 }
