--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -1,12 +1,15 @@
 // colors only
 
-$mainText: #010101;
-$mainBack: #fffcf0;
+$mainText: #1e2022;
+$mainBack: #f0f5f9;
+$gray: #52616a;
+$lightBlue: #c9d6de;
+
 $accent1: #dedcee;
 $brightAccent: #fbd14b;
 $accent2: #6a60a9;
 
-$menuColor: orange;
+$menuColor: $gray;
 
 $red: #FF1B1C;
 $yellow: #FFDA23;
