--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,1 +1,7 @@
-$mainFont: Arial;
+$mainFont: Lato, sans-serif;
+
+.container h2 {
+	font-family: 'Raleway';
+	font-weight: 300;
+	letter-spacing: 0.1em;
+}
