--- a/app/styles/_base-styles.scss
+++ b/app/styles/_base-styles.scss
@@ -13,7 +13,12 @@ a {
 }
 
 .hidden {
-	display: none;
+	border: 0px solid white;
+	height: 0;
+	opacity: 0;
+	z-index: 0;
+
+	transition: all 0.5s ease;
 }
 
 .btn {
