--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -19,21 +19,25 @@ body {
 }
 
 .header-container {
-	border: 2px solid $blue;
+	//border: 2px solid $blue;
 	height: 25em;
 }
 
 .about-container {
-	border: 2px solid $yellow;
+	background-color: $gray;
+	color: $mainBack;
+	//border: 2px solid $yellow;
 }
 
 .image-container {
-	border: 2px solid $blue;
+	//border: 2px solid $blue;
 	min-height: 15em;
 }
 
 .contact-container {
-	border: 2px solid $green;
+	//border: 2px solid $green;
+	background-color: $gray;
+	color: $mainBack;
 }
 
 .details {
