--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -1,6 +1,6 @@
 #menu {
 	align-content: center;
-	border: 2px solid $red;
+	background-color: $menuColor;
 	display: flex;
 	flex-wrap: wrap;
 	left: 0;
@@ -21,9 +21,10 @@
 }
 
 .menu-btn {
-	border: 0px solid $red;
+	background-color: $menuColor;
+	border: 0px solid white;
 	box-shadow: none;
-	color: $red;
+	color: $mainBack;
 	display: block;
 	letter-spacing: 0.1em;
 	margin-bottom: 0.5em;
@@ -33,7 +34,7 @@
 	transition: all 0.5s ease;
 
 	&:hover {
-		border: 0px solid $red;
+		border: 0px solid white;
 		box-shadow: none;
 		cursor: pointer;
 		letter-spacing: 0.2em;
@@ -48,8 +49,9 @@
 }
 
 .header-btn {
-	border: 1px solid $red;
-	color: $red;
+	background-color: $menuColor;
+	border: 1px solid $menuColor;
+	color: $mainBack;
 	display: block; 
 	letter-spacing: 0.1em;
 	margin-right: 0.8em;
@@ -57,6 +59,7 @@
 	text-align:center;
 	text-transform: lowercase;
 	width: 7em;
+	z-index: 100;
 
 	transition: all 0.5s ease;
 
