--- a/app/styles/_thumbImgs.scss
+++ b/app/styles/_thumbImgs.scss
@@ -9,6 +9,11 @@
 		margin: 0;
 		width: 1.2em;
 	}
+
+	a {
+		letter-spacing: 0.1em;
+		text-decoration: none;
+	}
 }
 
 .thumb-container {
@@ -43,6 +48,7 @@
 }
 
 .thumb-img {
+	box-shadow: -1px 1px 2px rgba(0,0,0,0.3);
 	border-radius: 0.5em;
 	width: 100%;
 }
