--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -5,6 +5,8 @@ $mainBack: #f0f5f9;
 $gray: #52616a;
 $lightBlue: #c9d6de;
 
+$shadow: rgba(0,0,0,0.3);
+
 $accent1: #dedcee;
 $brightAccent: #fbd14b;
 $accent2: #6a60a9;
