--- a/app/styles/_thumbImgs.scss
+++ b/app/styles/_thumbImgs.scss
@@ -29,8 +29,8 @@
 
 	li {
 		display: inline-block;
-		margin: 1%;
-		width: 12em;
+		margin: 0.5em;
+		width: 8em;
 	}
 }
 
@@ -48,7 +48,7 @@
 }
 
 .thumb-img {
-	box-shadow: -1px 1px 2px rgba(0,0,0,0.3);
+	box-shadow: -1px 1px 2px $shadow;
 	border-radius: 0.5em;
 	width: 100%;
 }
