added svg element to Header and drawing methods to HeaderContainer for svg; added name and subheader to Header; added styling for fonts and other header styles

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import '_base-styles';
 @import '_menu';
+@import '_header';
 @import '_thumbImgs';
 @import '_carousel';
 @import '_animations';
