--- a/app/styles/_base-styles.scss
+++ b/app/styles/_base-styles.scss
@@ -36,3 +36,9 @@ a {
 		box-shadow: 1px 1px 2px rgba(0,0,0,0.4), -1px -1px 2px rgba(0,0,0,0.4);
 	}
 }
+
+.line {
+	background-color: $mainText;
+	height: 1px;
+	width: 100%;
+}
