--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,7 +1,8 @@
 $mainFont: Lato, sans-serif;
+$headerFont: 'Raleway', sans-serif;
 
 .container h2 {
-	font-family: 'Raleway';
+	font-family: $headerFont;
 	font-weight: 300;
 	letter-spacing: 0.1em;
 }
