--- a/app/styles/_carousel.scss
+++ b/app/styles/_carousel.scss
@@ -52,7 +52,7 @@
 }
 
 .big-img {
-	box-shadow: -1px 1px 2px $shadow;
+	box-shadow: -1px 1px 2px $shadowColor;
 	margin: 0;
 	height: 100%;
 	min-width: auto;
