--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,5 +1,6 @@
-$mainFont: Lato, sans-serif;
+$mainFont: 'Open Sans', Arial, sans-serif;
 $headerFont: 'Raleway', sans-serif;
+$subheaderFont: Lato, sans-serif;
 
 .container h2 {
 	font-family: $headerFont;
