--- a/app/styles/_thumbImgs.scss
+++ b/app/styles/_thumbImgs.scss
@@ -48,7 +48,7 @@
 }
 
 .thumb-img {
-	box-shadow: -1px 1px 2px $shadow;
+	box-shadow: -1px 1px 2px $shadowColor;
 	border-radius: 0.5em;
 	width: 100%;
 }
