--- a/app/styles/_base-styles.scss
+++ b/app/styles/_base-styles.scss
@@ -45,7 +45,7 @@ p {
 
 	transition: all ease 0.5s;
 
-	&:hover {
+	&:hover, &:active, &:focus {
 		border: 1px solid grayscale(darken($mainBackColor, 12%));
 		box-shadow: 1px 1px 2px rgba(0,0,0,0.4), -1px -1px 2px rgba(0,0,0,0.4);
 	}
