--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -44,6 +44,10 @@ body {
 	justify-content: space-around;
 	align-items: center;
 
+	&.contact-details {
+		margin-top: 0.5em;
+	}
+
 	img {
 		max-width: 15%;
 	}
