--- a/app/styles/_thumbImgs.scss
+++ b/app/styles/_thumbImgs.scss
@@ -48,10 +48,17 @@
 }
 
 .thumb-img {
-	box-shadow: -1px 1px 2px $shadowColor;
+	box-shadow: -1px 1px 5px $shadowColor;
+	border: 1px solid rgba(0,0,0,0);
 	border-radius: 0.5em;
 	//min-width: 50px;
 	width: 100%;
+	transition: 0.5s ease all;
+
+	&:hover, &:focus, &:active {
+		border: 1px solid grayscale(darken($mainBackColor, 12%));
+		box-shadow: 1px 1px 2px rgba(0,0,0,0.4), -1px -1px 2px rgba(0,0,0,0.4);
+	}
 }
 
 .arrow {
