tweaked font, some styling, some bug fixes

--- a/app/styles/_thumbImgs.scss
+++ b/app/styles/_thumbImgs.scss
@@ -30,7 +30,7 @@
 	li {
 		display: inline-block;
 		margin: 0.5em;
-		width: 8em;
+		width: 250px;
 	}
 }
 
@@ -58,6 +58,12 @@
 	&:hover, &:focus, &:active {
 		border: 1px solid grayscale(darken($mainBackColor, 12%));
 		box-shadow: 1px 1px 2px rgba(0,0,0,0.4), -1px -1px 2px rgba(0,0,0,0.4);
+
+		-webkit-transform:scale(1.1); /* Safari and Chrome */
+		-moz-transform:scale(1.1); /* Firefox */
+		-ms-transform:scale(1.1); /* IE 9 */
+		-o-transform:scale(1.1); /* Opera */
+		transform:scale(1.1);
 	}
 }
 
