--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,5 +1,5 @@
 $mainFont: 'Open Sans', Arial, sans-serif;
-$headerFont: 'Raleway', sans-serif;
+$headerFont: 'Delius', cursive;
 $subheaderFont: Lato, sans-serif;
 
 .container h2 {
