--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -41,11 +41,18 @@ body {
 
 .details {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
 
 	&.contact-details {
+		justify-content: flex-start;
 		margin-top: 0.5em;
+
+		div {
+			height: 1.6em;
+			min-width: 400px;
+		}
 	}
 
 	img {
